@@ -264,17 +264,21 @@ one more label than date")
 ##' format can be intimidating for new users. This function can be used to
 ##' select quite complex dates simply - see examples below.
 ##'
-##' Dates are assumed to be inclusive, so \code{start = "1/1/1999"} means that
-##' times are selected from hour zero. Similarly, \code{end = "31/12/1999"}
-##' will include all hours of the 31st December.
+##' Dates are assumed to be inclusive, so \code{start = "1/1/1999"}
+##' means that times are selected from hour zero. Similarly, \code{end
+##' = "31/12/1999"} will include all hours of the 31st
+##' December. \code{start} and \code{end} can also be in standard R
+##' format as a string i.e. "YYYY-mm-dd", so \code{start =
+##' "1999-01-01"} is fine.
 ##'
 ##' All options are applied in turn making it possible to select quite complex
 ##' dates
 ##'
 ##' @param mydata A data frame containing a \code{date} field in hourly or high
 ##'   resolution format.
-##' @param start A start date in the form d/m/yyyy e.g. "1/2/1999".
-##' @param end An end date in the form d/m/yyyy e.g. "31/5/1999".
+##' @param start A start date string in the form d/m/yyyy
+##' e.g. "1/2/1999" or in 'R' format i.e. "YYYY-mm-dd", "1999-02-01"
+##' @param end See \code{start} for format.
 ##' @param year A year or years to select e.g. \code{year = 1998:2004} to
 ##'   select 1998-2004 inclusive or \code{year = c(1998, 2004)} to select 1998
 ##'   and 2004.
@@ -282,15 +286,12 @@ one more label than date")
 ##'   \code{month = 1:6} to select months 1-6 (January to June), or by name
 ##'   e.g. \code{month = c("January", "December")}. Names can be abbreviated to
 ##'   3 letters and be in lower or upper case.
-##' @param day A day or or days to select. For example \code{day = c("Monday",
+##' @param day A day name or or days to select. For example \code{day = c("Monday",
 ##'   "Wednesday")}. Names can be abbreviated to 3 letters and be in lower or
 ##'   upper case. Also accepts "weekday" (Monday - Friday) and "weekend" for
 ##'   convenience.
 ##' @param hour An hour or hours to select from 0-23 e.g. \code{hour = 0:12} to
 ##'   select hours 0 to 12 inclusive.
-##' @param use.local.tz Used when \code{start} and \code{end} dates are
-##'   supplied. The default is to use any time zone information supplied and if
-##'   not, assume GMT/UTC.
 ##' @export
 ##' @author David Carslaw
 ##' @keywords methods
@@ -301,8 +302,12 @@ one more label than date")
 ##' head(data.1999)
 ##' tail(data.1999)
 ##'
+##' # or...
+##' data.1999 <- selectByDate(mydata, start = "1999-01-01", end = "1999-12-31")
+##'
 ##' # easier way
 ##' data.1999 <- selectByDate(mydata, year = 1999)
+##'
 ##'
 ##' # more complex use: select weekdays between the hours of 7 am to 7 pm
 ##' sub.data <- selectByDate(mydata, day = "weekday", hour = 7:19)
@@ -312,22 +317,31 @@ one more label than date")
 ##' c("dec", "jan", "feb"))
 ##'
 selectByDate <- function (mydata, start = "1/1/2008", end = "31/12/2008", year = 2008,
-    month = 1, day = "weekday", hour = 1, use.local.tz = TRUE)
+    month = 1, day = "weekday", hour = 1)
 
 {
      ## extract variables of interest
     vars <- names(mydata)
 
     weekday.names <- format(ISOdate(2000, 1, 3:9), "%A")
-    my.tz <- if(use.local.tz)
 
-        attr(mydata$date, "tzone") <- attr(mydata$date, "tzone") else  attr(mydata$date, "tzone") <- "GMT"
-    if (is.null(my.tz)) my.tz <- ""
 
     if (!missing(start) & !missing(end)) {
-        start <- as.POSIXct(strptime(start, format = "%d/%m/%Y"), my.tz)
-        end <- as.POSIXct(strptime(end, format = "%d/%m/%Y"), my.tz) + (23 * 3600)
-        mydata <- subset(mydata, date >= start & date <= end)
+
+        if (length(grep("/", start)) > 0 & length(grep("/", end)) > 0) {
+            ## assume UK date format
+            start <- as.Date(start, "%d/%m/%Y")
+            end <- as.Date(end, "%d/%m/%Y")
+        }
+
+        if (length(grep("-", start)) > 0 & length(grep("-", end)) > 0) {
+            ## assume R date format
+            start <- as.Date(start)
+            end <- as.Date(end)
+        }
+
+        mydata <- subset(mydata, as.Date(date) >= start & as.Date(date) <= end)
+
     }
     if (!missing(year)) {
         mydata <- mydata[as.numeric(format(mydata$date, "%Y")) %in%  year, ]
